# DeekeScriptJni

./: settings.gradle
app/: build.gradle  proguard-rules.pro
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/top/deeke/jni/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  test.lib.cpp  v8_exec.cpp
app/src/main/cpp/v8/: console.cpp  deeke_v8.cpp  deeke_v8.h
app/src/main/java/top/deeke/jni/: MainActivity.java
app/src/main/java/top/deeke/jni/v8/: Console.java  JavaCallback.java  JavaVoidCallback.java  LibraryLoader.java  NodeJS.java  Platform.java  PlatformDetector.java  ReferenceHandler.java  Releasable.java  SignatureProvider.java  V8.java  V8Array.java  V8ArrayBuffer.java  V8Function.java  V8Locker.java  V8Object.java  V8ResultUndefined.java  V8RuntimeException.java  V8ScriptCompilationException.java  V8ScriptException.java  V8ScriptExecutionException.java  V8TypedArray.java  V8Value.java
app/src/main/java/top/deeke/jni/v8/debug/: BreakEvent.java  BreakHandler.java  CompileEvent.java  DebugHandler.java  EventData.java  ExceptionEvent.java  ExecutionState.java  ScriptBreakPoint.java  StepAction.java  V8DebugServer.java
app/src/main/java/top/deeke/jni/v8/inspector/: DebuggerConnectionListener.java  V8Inspector.java  V8InspectorDelegate.java
app/src/main/java/top/deeke/jni/v8/utils/: ArrayBuffer.java  ConcurrentV8.java  MemoryManager.java  SingleTypeAdapter.java  TypeAdapter.java  TypedArray.java  V8Executor.java  V8Map.java  V8ObjectUtils.java  V8PropertyMap.java  V8Runnable.java  V8Thread.java
app/src/test/java/top/deeke/jni/: ExampleUnitTest.java
app/src/test/java/top/deeke/jni/v8/: A_RunAheadTests.java  LibraryLoaderTest.java  NodeJSTest.java  NullScriptExecuteTest.java  PlatformDetectorTest.java  V8ArrayBufferTest.java  V8ArrayTest.java  V8CallbackTest.java  V8JSFunctionCallTest.java  V8LockerTest.java  V8MultiThreadTest.java  V8ObjectTest.java  V8RuntimeNotLoadedTest.java  V8ScriptCompilationExceptionTest.java  V8ScriptExecutionExceptionTest.java  V8Test.java  V8TypedArraysTest.java
app/src/test/java/top/deeke/jni/v8/debug/: BreakEventTest.java  DebugHandlerTest.java  FrameTest.java  (+4 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+24 files in other folders)
